Added delete registered student & updated allowed origins
