# docs/swagger.json
@@ -12,6 +12,46 @@
     "host": "e1ect.herokuapp.com",
     "basePath": "/",
     "paths": {
+        "/api/registeredstudent/{id}": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Delete the student you have registered",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Student ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/registeredstudents": {
             "get": {
                 "produces": [
@@ -317,6 +357,9 @@
                     "type": "string"
                 },
                 "reg_number": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
